--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Arthur Tchaye I <dtchayearthur@gmail.com>
-Sylvester Samuel <samsylvester09@gmail.com}
+Sylvester Samuel <samsylvester09@gmail.com
